# orgroam2obsidian

./: .gitignore  convert.py  pyproject.toml
orgroam2obsidian/: __init__.py  convert.py
test/: setup_fakedata.sh  test.py  test_standard.py
