[tool.poetry]
authors = [
	"Toni Cebrián <toni@tonicebrian.com>",
	"Ryan Young <git@ryanyoung.io>",
]
name = "orgroam2obsidian"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "orgroam2obsidian" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
